#928 Fix label alignment

--- a/server/http-dashboard/app/components/Widgets/components/Widget/styles.less
+++ b/server/http-dashboard/app/components/Widgets/components/Widget/styles.less
@@ -40,7 +40,6 @@
 }
 
 .widgets--widget-label {
-  padding-right: 70px;
   line-height: 44px;
   vertical-align: bottom;
   flex-basis: 32px;
